test/scc/stmt/semantic-errors/026.a
026.t:5:13: error: a declaration may only be used within a block